--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					</div>
 					<div class="mainNav"> 
 						<ul class="navList">
-							<li><a href="Home.html">Press</a></li>
+							<li><a href="index.html">Press</a></li>
 							<li><a href="Portfolio.html">Portfolio</a></li>  
 							<li><a href="Press.html">About</a></li>  
 						</ul>
